# Bun-vs-Rust-for-databases

./: .gitignore  README.md  testing.sqlite
cpp_fetch_test/: main.cpp
cpp_perf_test/: Makefile  README.md  main  main.cpp
cpp_perf_test/include/: library.h  psql.h
front_end_publisher/: README.md  bun.lockb  data.json  index.ts  package.json  ws_test.ts
js-bun-test/: .gitignore  Dockerfile  README.md  \  bun.lockb  data.json  db_test.ts  index.ts  package.json  result_js.txt  test.json  tsconfig.json
js-bun-test/libs/: database.ts  mod.ts  read.ts  server.ts  workerThread.ts  write.ts
js-bun-test/types/: types.d.ts
rust_perf_test/: Cargo.toml  test.json
rust_perf_test/migrations/: 20231005203954_rust_db.down.sql  20231005204105_rust_db.sql  20231005204105_rust_db.up.sql
rust_perf_test/src/: book.rs  lib.rs  main.rs  profilers.rs  reader.rs
rust_perf_test/src/libs/: mod.rs  read_json.rs
rust_perf_test/tests/: test_mpsc.rs
