[package]
name = "rust_perf_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [
    "postgres",
    "json",
    "macros",
    "runtime-tokio",
] }

serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
simple_logger = "4.2.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
